<resources>
    <string name="app_name">Moto4Rent</string>
    <string name="moto4rent">Moto4Rent</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="moto_website">http://www.moto4rent.ro</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="terms_and_conditions_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod odio iaculis nulla viverra posuere. Curabitur nec nisl feugiat massa malesuada pretium et in dui. Aliquam erat volutpat. Aenean condimentum sodales ipsum, non varius elit porta vitae. In nec ipsum diam. Ut posuere commodo erat eu ullamcorper. Etiam pretium at mi non porttitor. Duis ornare elit nibh, vel tincidunt lacus tempus eget. Morbi dolor ex, sollicitudin non metus vel, ornare iaculis nisi. Sed pulvinar lorem vitae odio placerat, in pharetra erat porttitor. Maecenas ultrices consequat cursus. Duis vel maximus lorem. Vivamus ornare enim vitae nisi maximus, ac efficitur libero bibendum.Pellentesque sit amet nunc odio. Vestibulum condimentum convallis orci, vitae euismod nunc sodales vel. Nullam egestas, velit in rutrum gravida, neque enim efficitur ex, commodo consectetur libero sapien ut orci. Fusce ac eros pharetra quam consectetur vulputate et et est. Suspendisse euismod arcu non mollis accumsan. Integer felis elit, lacinia eget dignissim in, hendrerit sit amet diam. Nullam sollicitudin vehicula nulla condimentum iaculis. Cras ultrices placerat cursus. Proin fringilla metus erat, vel cursus erat vestibulum a. Mauris quis semper risus. Vivamus elementum, neque non tincidunt fermentum, leo magna tincidunt leo, in accumsan eros leo nec mi. Nullam non turpis pretium, euismod erat in, pharetra quam. Sed magna lacus, pretium tempor nulla nec, imperdiet iaculis massa. Ut venenatis velit vitae consectetur luctus. Fusce nec dui in augue euismod elementum sed quis ex. Praesent pretium enim velit, sed consequat orci sollicitudin vitae.Aenean magna risus, efficitur quis augue vel, rutrum gravida leo. Suspendisse at leo at lectus laoreet varius quis vel ligula. Duis mollis in neque at semper. Aenean sem mauris, efficitur pharetra ullamcorper non, interdum sit amet ex. Quisque ut ornare quam. Aliquam efficitur purus tellus, ac porta massa vehicula eget. Cras sit amet bibendum augue. Pellentesque ac volutpat mauris, sit amet pellentesque risus. Etiam luctus ac est eu venenatis. Suspendisse pulvinar at risus et elementum. Proin orci nulla, vulputate in tincidunt sed, mollis eu mi. Sed quis ipsum nec mauris vestibulum ornare. Sed a rhoncus erat.Praesent aliquet rutrum vestibulum. Integer non augue sed quam fringilla rutrum quis id ex. Pellentesque quis orci malesuada, tristique risus eu, suscipit ligula. Nunc nisl neque, iaculis vel risus id, tincidunt euismod magna. Ut libero dolor, fermentum ut enim quis, commodo blandit odio. Phasellus nec lobortis nunc. Integer metus ex, sagittis vel ornare nec, sagittis ac ex. Aliquam vel sollicitudin nisl. Sed eu tincidunt eros. Suspendisse commodo dui id sem vestibulum euismod. Pellentesque imperdiet lacus ut tortor sollicitudin, non lobortis velit interdum. Mauris scelerisque ac ligula in fermentum. Etiam a imperdiet leo, vitae tristique enim. Phasellus blandit justo tellus, sit amet venenatis libero venenatis eget. Nulla et tristique augue, eget rutrum sem.Quisque ut convallis neque. Curabitur mollis mi lacus, et vestibulum est blandit id. Proin fermentum in nibh eget commodo. Curabitur quis feugiat leo. Donec dapibus vel sem nec commodo. Nunc velit magna, laoreet pellentesque aliquam sed, varius sit amet massa. Quisque suscipit ultricies massa, et fermentum metus suscipit vitae. Sed aliquet euismod odio, at faucibus risus laoreet eget. Nam at nulla vitae lorem auctor commodo.</string>
    <string name="accept">ACCEPT</string>
    <string name="deny">DENY</string>
    <string name="login">Login</string>
    <string name="or">OR USING</string>
    <string name="google_account">Google Account</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="message_exit">Press back again to exit.</string>
    <string name="error_password_too_short">The password should be at least 5 characters.</string>
    <string name="error_empty_field">The field is empty.</string>
    <string name="error_invalid_user">Email address or password is invalid.</string>
    <string name="error_tos">You declined our terms and conditions.</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="registering_a_new_user">New User</string>
    <string name="submit_data">Submit Data</string>
    <string name="message_verify_email">Verify your email address.</string>
    <string name="recover_password">Recover Password</string>
    <string name="skip">SKIP</string>
    <string name="settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="new_in_this_version">New in this Version</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="alert_logout">Logout</string>
    <string name="alert_sign_out">Are you sure you want to sign out?</string>
    <string name="trip">Trip</string>
    <string name="showcase">Showcase</string>
    <string name="rent">Rent</string>
    <string name="deposit_sum">Deposit</string>
    <string name="start_price">Starting Price</string>
    <string name="category">Category</string>

    <string name="share_message_1">
        #MOTO4RENT \n Iubesti liniile elegante ale motocicletelor clasice? Naked-ul Kawasaki ZR7 te
        asteapta sa il incerci. \n www.moto4rent.ro</string>

    <string name="share_message_2">
        #MOTO4RENT \n La granita dintre stilul sport si naked, Hornet beneficiaza de propulsorul
        popularului model de viteza CBR600 si de suspensii intalnite pe modelele carenate din
        aceeasi perioada cu ea. Proportiile compacte si usurinta in manevrare raman insa fara
        indoiala cele ale clasei naked, Hornetul constituind in perioada aparitiei cel mai puternic
        exemplar al categoriei sale.\n www.moto4rent.ro</string>

    <string name="share_message_3">
        #MOTO4RENT \n Nu ai avut curaj sa faci pasul la supersport dar vrei sa te convingi ca poti
        stapani in siguranta un model de viteza? Kawasaki ZX6R, cunoscut ca si 636, este bland la
        turatii reduse si poate merge linistit in oras, aratandu-si puterea doar cand jocul se
        schimba o data cu regimul de ture. \n www.moto4rent.ro</string>

    <string name="share_message_4">
        #MOTO4RENT \n O motocicleta versatila, in elementul ei aproape oriunde pe asfalt, de la strazile orasului aglomerat la soselele sinuoase de munte. Masa relativ redusa, consumul mic, motorul consacrat in V de 650 cmc al celor de la Suzuki promit plimbari placute. \n www.moto4rent.ro
    </string>

    <string name="share_message_5">
        #MOTO4RENT \n Un model clasic supersport din clasa 600cc, pentru pasionatii genului. Pozitia pe motocicleta, franele supra dimensionate, plaja inalta de turatii pentru exploatarea optima sunt caracteristici care cer experienta si siguranta din partea pilotului dar ofera satisfactii pe masura. Se recomanda riderilor cu experienta pe modele supersport. \n www.moto4rent.ro
    </string>

    <string name="share_message_6">
        #MOTO4RENT \n Esti proaspat posesor de permis categoria A si doresti sa inchiriezi o motocicleta cu care esti familiarizat din scoala moto? Nu ai mai condus de mult si doresti sa te familiarizezi din nou cu motocicleta? Ai nevoie de un commuter de incredere de care sa te folosesti in regim zilnic? Alege nakedul Suzuki GS500 \n www.moto4rent.ro
    </string>
    <string name="thanks_contact">Thank you for contacting us.</string>
    <string name="thanks_share">Thank you for sharing!</string>
    <string name="email_moto4rent">contact@moto4rent.ro</string>
    <string name="contact_page">Contact Page</string>
    <string name="phone_1">0720083839</string>
    <string name="phone_2">0770462537</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="brand_details">Brand Details</string>
    <string name="brand_description">SC ART NET SRL\nJ40/1034/2000\nRO12674545\nSediu Social Vlaicu Voda 28\nSector 3 Bucuresti\n(non-commercial location)\nUniCredit Bank - Dristor\nRO94BACX0000001600438000</string>
    <string name="moto4rent_address">Moto4Rent, Strada Ion Minulescu 105, București 031215</string>
    <string name="emailto">Send email...</string>
    <string name="back_text">Back</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="image_fragment_tag">image_fragment</string>
    <string name="discard">DISCARD</string>
    <string name="enter_a_title_for_your_image">Enter a title for your image</string>
    <string name="moto_description">General information Model: Kawasaki ZR-7\nYear: 2001\nCategory: Allround Rating: 68.8 out of 100\nEngine and transmission Displacement: 739.00 ccm (45.09 cubic inches)\nEngine type: In-line four, four-stroke\nPower: 76.00 HP (55.5 kW)) @ 9500\nRPM Torque: 63.00 Nm (6.4 kgf-m or 46.5 ft.lbs) @ 7300\nRPM Top speed: 205.0 km/h (127.4 mph)\nBore x stroke: 66.0 x 54.0 mm (2.6 x 2.1 inches) Valves per cylinder: 2 Fuel system: Carburettor Gearbox: 5-speed Transmission type, final drive: Chain Chassis, suspension, brakes and wheels Front wheel travel: 130 mm (5.1 inches) Rear wheel travel: 130 mm (5.1 inches) Front tyre: 120/70-ZR17 Rear tyre: 160/60-ZR17 Front brakes: Dual disc Front brakes diameter: 300 mm (11.8 inches) Rear brakes: Single disc Rear brakes diameter: 240 mm (9.4 inches) Physical measures and capacities Dry weight: 205.0 kg (451.9 pounds) Power/weight ratio: 0.3707 HP/kg Seat height: 815 mm (32.1 inches) If adjustable, lowest setting. Wheelbase: 1,455 mm (57.3 inches) Fuel capacity: 22.00 litres (5.81 gallons)</string>
</resources>
